pep test work, fixed path to functional test

--- a/circle.yml
+++ b/circle.yml
@@ -15,8 +15,8 @@ dependencies:
 
 test:
   pre:
-    - pycodestyle . --exclude="env,venv,build,.git,lib,test_harnesses" --ignore="E501" --show-source
+    - pycodestyle . --exclude="env,venv,build,.git,lib,headmaster/headmaster/settings.py" --ignore="E501" --show-source
   override:
 
     # Run a simple functional test
-    - /test_harnesses/functional_test.sh headmaster 8000 ehQ30ia6Reh7shM4O5zH
+    - ./test_harnesses/functional_test.sh headmaster 8000 ehQ30ia6Reh7shM4O5zH
